--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
 	<head>
+		<title>Yami</title>
 		<meta charset="utf-8" />
+		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
